k8s/backend/allow-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-ingress
  namespace: platform-dev
spec:
  podSelector: 
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 3000
      protocol: TCP
