k8s/backend/allow-ingress-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-backend
  namespace: platform-dev
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - namespaceSelector: 
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      ports:
      - port: 3000
        protocol: TCP
