k8s/backend/deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: platform-dev
spec:
  podSelector: {}
  policyTypes:
  - Egress
